fix: update to use mongodb
